// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createComponent creates empty component 1`] = `
<div
  className=""
/>
`;

exports[`createComponentStyles creates a component 1`] = `
<div
  className="cf-dxtwdx"
>
  <i
    className="cf-18oup6l"
  />
</div>
`;

exports[`mergeThemes should override the baseTheme if more than one theme is provided 1`] = `
Object {
  "theme": Object {
    "arrowSize": "5px",
    "bodyAccentColor": "#333",
    "bodyBackground": "#ebebeb",
    "bodyOffsetColor": "#787878",
    "borderRadius": "2px",
    "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
    "breakpoints": Object {
      "desktop": "3px",
      "desktopLarge": "97.6em",
      "mobile": "13.6em",
      "mobileWide": "30.4em",
      "tablet": "47.2em",
      "tv": "2px",
    },
    "color": "yellow",
    "colorBlack": "#000",
    "colorBlue": "#2f7bbf",
    "colorBlueDark": "#2869a2",
    "colorBlueLight": "#62a1d8",
    "colorError": "#ff3100",
    "colorFacebookBlue": "#3b5998",
    "colorGray": "#7c7c7c",
    "colorGrayBorder": "#666",
    "colorGrayDark": "#333",
    "colorGrayLight": "#dedede",
    "colorGrayLightOnboarding": "#F7F7F7",
    "colorGreen": "#9bca3e",
    "colorGreenDark": "#87b331",
    "colorGreenLight": "#bada7a",
    "colorImportantInformation": "rgba(64,139,201,0.2)",
    "colorInfo": "#00a9eb",
    "colorMainBackground": "#e6e6e6",
    "colorMuted": "#7c7c7c",
    "colorOffsetDark": 0.07,
    "colorOffsetLight": 0.15,
    "colorOrange": "#ff7900",
    "colorOrangeDark": "#db6800",
    "colorOrangeLight": "#ffa14d",
    "colorOverlay": "rgba(0, 0, 0, .7)",
    "colorPink": "#d91698",
    "colorPinkDark": "#b91381",
    "colorPinkLight": "#ed4eb8",
    "colorPurple": "#9545e5",
    "colorPurpleDark": "#b91381",
    "colorPurpleLight": "#ed4eb8",
    "colorRed": "#bd2527",
    "colorRedDark": "#9f1f21",
    "colorRedLight": "#dd5153",
    "colorSmoke": "#f2f2f2",
    "colorSuccess": "#68970f",
    "colorTwitterBlue": "#00aced",
    "colorWarning": "#fca520",
    "colorWhite": "#fff",
    "colorYellow": "#ffd24d",
    "colorYellowDark": "#ffc929",
    "colorYellowLight": "#ffe59a",
    "disabledBackground": "#ededed",
    "em": "1em",
    "fontColor": "#333",
    "fontColorHeadingCaption": "#888",
    "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
    "gradient": Object {
      "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
      "five": "linear-gradient(left, #8176B5, #F16975)",
      "four": "linear-gradient(left, #8176B5, #BA77B1)",
      "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
      "seven": "linear-gradient(left, #F69259, #FFDB6F)",
      "six": "linear-gradient(left, #F16975, #F69259)",
      "three": "linear-gradient(left, #8176B5, #76C4E2)",
      "two": "linear-gradient(left, #8176B5, #85CBA8)",
    },
    "inputFontSize": "13px",
    "inputLineHeight": 1.4,
    "lineHeight": 1.5,
    "rem": "1rem",
    "weightBold": 700,
    "weightLight": 300,
    "weightNormal": 400,
    "weightSemiBold": 600,
    "zIndexMax": 1000,
  },
}
`;

exports[`mergeThemes should return the baseTheme if no extra theme is provided 1`] = `
Object {
  "theme": Object {
    "arrowSize": "5px",
    "bodyAccentColor": "#333",
    "bodyBackground": "#ebebeb",
    "bodyOffsetColor": "#787878",
    "borderRadius": "2px",
    "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
    "breakpoints": Object {
      "desktop": "64em",
      "desktopLarge": "97.6em",
      "mobile": "13.6em",
      "mobileWide": "30.4em",
      "tablet": "47.2em",
    },
    "color": Object {
      "apple": "#BD2527",
      "cement": "#7D7D7D",
      "dawn": "#F16975",
      "dew": "#85CBA8",
      "dusk": "#4D4D4F",
      "grass": "#9BCA3E",
      "hail": "#BCBEC0",
      "lightning": "#FFDB6F",
      "marine": "#2F7BBF",
      "moonshine": "#F7F7F7",
      "night": "#404041",
      "rain": "#408BC9",
      "sky": "#76C4E2",
      "storm": "#808285",
      "sunrise": "#F69259",
      "sunset": "#BA77B1",
      "tangerine": "#FF7900",
      "twilight": "#8176B5",
    },
    "colorBlack": "#000",
    "colorBlue": "#2f7bbf",
    "colorBlueDark": "#2869a2",
    "colorBlueLight": "#62a1d8",
    "colorError": "#ff3100",
    "colorFacebookBlue": "#3b5998",
    "colorGray": "#7c7c7c",
    "colorGrayBorder": "#666",
    "colorGrayDark": "#333",
    "colorGrayLight": "#dedede",
    "colorGrayLightOnboarding": "#F7F7F7",
    "colorGreen": "#9bca3e",
    "colorGreenDark": "#87b331",
    "colorGreenLight": "#bada7a",
    "colorImportantInformation": "rgba(64,139,201,0.2)",
    "colorInfo": "#00a9eb",
    "colorMainBackground": "#e6e6e6",
    "colorMuted": "#7c7c7c",
    "colorOffsetDark": 0.07,
    "colorOffsetLight": 0.15,
    "colorOrange": "#ff7900",
    "colorOrangeDark": "#db6800",
    "colorOrangeLight": "#ffa14d",
    "colorOverlay": "rgba(0, 0, 0, .7)",
    "colorPink": "#d91698",
    "colorPinkDark": "#b91381",
    "colorPinkLight": "#ed4eb8",
    "colorPurple": "#9545e5",
    "colorPurpleDark": "#b91381",
    "colorPurpleLight": "#ed4eb8",
    "colorRed": "#bd2527",
    "colorRedDark": "#9f1f21",
    "colorRedLight": "#dd5153",
    "colorSmoke": "#f2f2f2",
    "colorSuccess": "#68970f",
    "colorTwitterBlue": "#00aced",
    "colorWarning": "#fca520",
    "colorWhite": "#fff",
    "colorYellow": "#ffd24d",
    "colorYellowDark": "#ffc929",
    "colorYellowLight": "#ffe59a",
    "disabledBackground": "#ededed",
    "em": "1em",
    "fontColor": "#333",
    "fontColorHeadingCaption": "#888",
    "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
    "gradient": Object {
      "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
      "five": "linear-gradient(left, #8176B5, #F16975)",
      "four": "linear-gradient(left, #8176B5, #BA77B1)",
      "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
      "seven": "linear-gradient(left, #F69259, #FFDB6F)",
      "six": "linear-gradient(left, #F16975, #F69259)",
      "three": "linear-gradient(left, #8176B5, #76C4E2)",
      "two": "linear-gradient(left, #8176B5, #85CBA8)",
    },
    "inputFontSize": "13px",
    "inputLineHeight": 1.4,
    "lineHeight": 1.5,
    "rem": "1rem",
    "weightBold": 700,
    "weightLight": 300,
    "weightNormal": 400,
    "weightSemiBold": 600,
    "zIndexMax": 1000,
  },
}
`;

exports[`mergesThemes should accept functions themes 1`] = `
Object {
  "theme": Object {
    "arrowSize": "5px",
    "bodyAccentColor": "#333",
    "bodyBackground": "#ebebeb",
    "bodyOffsetColor": "#787878",
    "borderRadius": "2px",
    "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
    "breakpoints": Object {
      "desktop": "64em",
      "desktopLarge": "97.6em",
      "mobile": "13.6em",
      "mobileWide": "30.4em",
      "tablet": "47.2em",
    },
    "color": "yellow",
    "colorBlack": "#000",
    "colorBlue": "#2f7bbf",
    "colorBlueDark": "#2869a2",
    "colorBlueLight": "#62a1d8",
    "colorError": "#ff3100",
    "colorFacebookBlue": "#3b5998",
    "colorGray": "#7c7c7c",
    "colorGrayBorder": "#666",
    "colorGrayDark": "#333",
    "colorGrayLight": "#dedede",
    "colorGrayLightOnboarding": "#F7F7F7",
    "colorGreen": "#9bca3e",
    "colorGreenDark": "#87b331",
    "colorGreenLight": "#bada7a",
    "colorImportantInformation": "rgba(64,139,201,0.2)",
    "colorInfo": "#00a9eb",
    "colorMainBackground": "#e6e6e6",
    "colorMuted": "#7c7c7c",
    "colorOffsetDark": 0.07,
    "colorOffsetLight": 0.15,
    "colorOrange": "#ff7900",
    "colorOrangeDark": "#db6800",
    "colorOrangeLight": "#ffa14d",
    "colorOverlay": "rgba(0, 0, 0, .7)",
    "colorPink": "#d91698",
    "colorPinkDark": "#b91381",
    "colorPinkLight": "#ed4eb8",
    "colorPurple": "#9545e5",
    "colorPurpleDark": "#b91381",
    "colorPurpleLight": "#ed4eb8",
    "colorRed": "#bd2527",
    "colorRedDark": "#9f1f21",
    "colorRedLight": "#dd5153",
    "colorSmoke": "#f2f2f2",
    "colorSuccess": "#68970f",
    "colorTwitterBlue": "#00aced",
    "colorWarning": "#fca520",
    "colorWhite": "#fff",
    "colorYellow": "#ffd24d",
    "colorYellowDark": "#ffc929",
    "colorYellowLight": "#ffe59a",
    "disabledBackground": "#ededed",
    "em": "1em",
    "fontColor": "#333",
    "fontColorHeadingCaption": "#888",
    "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
    "gradient": Object {
      "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
      "five": "linear-gradient(left, #8176B5, #F16975)",
      "four": "linear-gradient(left, #8176B5, #BA77B1)",
      "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
      "seven": "linear-gradient(left, #F69259, #FFDB6F)",
      "six": "linear-gradient(left, #F16975, #F69259)",
      "three": "linear-gradient(left, #8176B5, #76C4E2)",
      "two": "linear-gradient(left, #8176B5, #85CBA8)",
    },
    "inputFontSize": "13px",
    "inputLineHeight": 1.4,
    "lineHeight": 1.5,
    "rem": "1rem",
    "weightBold": 700,
    "weightLight": 300,
    "weightNormal": 400,
    "weightSemiBold": 600,
    "zIndexMax": 1000,
  },
}
`;

exports[`mergesThemes should accept object themes 1`] = `
Object {
  "theme": Object {
    "arrowSize": "5px",
    "bodyAccentColor": "#333",
    "bodyBackground": "#ebebeb",
    "bodyOffsetColor": "#787878",
    "borderRadius": "2px",
    "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
    "breakpoints": Object {
      "desktop": "64em",
      "desktopLarge": "97.6em",
      "mobile": "13.6em",
      "mobileWide": "30.4em",
      "tablet": "47.2em",
    },
    "color": "yellow",
    "colorBlack": "#000",
    "colorBlue": "#2f7bbf",
    "colorBlueDark": "#2869a2",
    "colorBlueLight": "#62a1d8",
    "colorError": "#ff3100",
    "colorFacebookBlue": "#3b5998",
    "colorGray": "#7c7c7c",
    "colorGrayBorder": "#666",
    "colorGrayDark": "#333",
    "colorGrayLight": "#dedede",
    "colorGrayLightOnboarding": "#F7F7F7",
    "colorGreen": "#9bca3e",
    "colorGreenDark": "#87b331",
    "colorGreenLight": "#bada7a",
    "colorImportantInformation": "rgba(64,139,201,0.2)",
    "colorInfo": "#00a9eb",
    "colorMainBackground": "#e6e6e6",
    "colorMuted": "#7c7c7c",
    "colorOffsetDark": 0.07,
    "colorOffsetLight": 0.15,
    "colorOrange": "#ff7900",
    "colorOrangeDark": "#db6800",
    "colorOrangeLight": "#ffa14d",
    "colorOverlay": "rgba(0, 0, 0, .7)",
    "colorPink": "#d91698",
    "colorPinkDark": "#b91381",
    "colorPinkLight": "#ed4eb8",
    "colorPurple": "#9545e5",
    "colorPurpleDark": "#b91381",
    "colorPurpleLight": "#ed4eb8",
    "colorRed": "#bd2527",
    "colorRedDark": "#9f1f21",
    "colorRedLight": "#dd5153",
    "colorSmoke": "#f2f2f2",
    "colorSuccess": "#68970f",
    "colorTwitterBlue": "#00aced",
    "colorWarning": "#fca520",
    "colorWhite": "#fff",
    "colorYellow": "#ffd24d",
    "colorYellowDark": "#ffc929",
    "colorYellowLight": "#ffe59a",
    "disabledBackground": "#ededed",
    "em": "1em",
    "fontColor": "#333",
    "fontColorHeadingCaption": "#888",
    "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
    "gradient": Object {
      "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
      "five": "linear-gradient(left, #8176B5, #F16975)",
      "four": "linear-gradient(left, #8176B5, #BA77B1)",
      "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
      "seven": "linear-gradient(left, #F69259, #FFDB6F)",
      "six": "linear-gradient(left, #F16975, #F69259)",
      "three": "linear-gradient(left, #8176B5, #76C4E2)",
      "two": "linear-gradient(left, #8176B5, #85CBA8)",
    },
    "inputFontSize": "13px",
    "inputLineHeight": 1.4,
    "lineHeight": 1.5,
    "rem": "1rem",
    "weightBold": 700,
    "weightLight": 300,
    "weightNormal": 400,
    "weightSemiBold": 600,
    "zIndexMax": 1000,
  },
}
`;
